working towards a testable version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(
     drone_swarm
     VERSION 0.2.0
     DESCRIPTION "Drone Swarm Simulator for macOS using C++23 and MapLibre Native"
-    LANGUAGES CXX
+    LANGUAGES CXX OBJC OBJCXX Swift
 )
 
 set(CMAKE_CXX_STANDARD 23)
@@ -21,7 +21,6 @@ set(FETCHCONTENT_QUIET OFF)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 # MapLibre Native configuration
-set(MLN_WITH_CORE_ONLY ON CACHE BOOL "" FORCE)
 set(MLN_WITH_GLFW OFF CACHE BOOL "" FORCE)
 set(MLN_WITH_QT OFF CACHE BOOL "" FORCE)
 set(MLN_WITH_NODE OFF CACHE BOOL "" FORCE)
@@ -33,6 +32,8 @@ set(MLN_WITH_VULKAN OFF CACHE BOOL "" FORCE)
 set(BUILD_TESTING OFF CACHE BOOL "" FORCE)
 
 # Third-party dependencies
+set(SPDLOG_FMT_EXTERNAL OFF CACHE BOOL "" FORCE)
+set(SPDLOG_FMT_USE_STD_FORMAT OFF CACHE BOOL "" FORCE)
 FetchContent_Declare(
     spdlog
     GIT_REPOSITORY https://github.com/gabime/spdlog.git
@@ -43,12 +44,6 @@ FetchContent_Declare(
     nlohmann_json
     GIT_REPOSITORY https://github.com/nlohmann/json.git
     GIT_TAG v3.11.3
-)
-
-FetchContent_Declare(
-    glm
-    GIT_REPOSITORY https://github.com/g-truc/glm.git
-    GIT_TAG 0.9.9.8
 )
 
 FetchContent_Declare(
@@ -64,7 +59,8 @@ set(GLFW_INSTALL OFF CACHE BOOL "" FORCE)
 FetchContent_Declare(
     maplibre_native
     GIT_REPOSITORY https://github.com/maplibre/maplibre-native.git
-    GIT_TAG v2.5.0
+    # Commit pinned to main (2024-01-24) to avoid missing release tags.
+    GIT_TAG 1dfc16736a4b13906100fe95e74755792c89cf83
     GIT_SHALLOW OFF
 )
 
@@ -74,7 +70,20 @@ FetchContent_Declare(
     GIT_TAG v3.5.3
 )
 
-FetchContent_MakeAvailable(spdlog nlohmann_json glm glfw maplibre_native Catch2)
+FetchContent_MakeAvailable(spdlog nlohmann_json glfw maplibre_native Catch2)
+
+FetchContent_Declare(
+    glm
+    GIT_REPOSITORY https://github.com/g-truc/glm.git
+    GIT_TAG 0.9.9.8
+)
+
+FetchContent_GetProperties(glm)
+if (NOT glm_POPULATED)
+    FetchContent_Populate(glm)
+    add_library(glm INTERFACE)
+    target_include_directories(glm INTERFACE ${glm_SOURCE_DIR})
+endif()
 
 add_subdirectory(src/drone_swarm)
 add_subdirectory(apps/simulator)
@@ -83,3 +92,8 @@ if (DRONE_SWARM_BUILD_TESTS)
     enable_testing()
     add_subdirectory(tests)
 endif()
+
+add_custom_target(distclean
+    COMMAND ${CMAKE_COMMAND} -P ${CMAKE_SOURCE_DIR}/cmake/distclean.cmake
+    COMMENT "Remove CMake cache, third-party downloads, and generated targets"
+)
