--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,7 +3,7 @@
     "configurations": [
         {
             "name": "Drone Swarm (Debug)",
-            "type": "cppdbg",
+            "type": "lldb",
             "request": "launch",
             "program": "${workspaceFolder}/build/apps/simulator/drone_swarm_app",
             "args": [],
@@ -24,15 +24,7 @@
             ],
             "stopAtEntry": false,
             "externalConsole": false,
-            "MIMode": "lldb",
-            "miDebuggerPath": "/usr/bin/lldb",
-            "preLaunchTask": "CMake: Build",
-            "setupCommands": [
-                {
-                    "description": "Enable pretty-printing for LLDB",
-                    "text": "settings set target import-std-module true"
-                }
-            ]
+            "preLaunchTask": "CMake: Build"
         }
     ]
 }
