swap debuggers to CodeLLDB

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,22 +8,9 @@
             "program": "${workspaceFolder}/build/apps/simulator/drone_swarm_app",
             "args": [],
             "cwd": "${workspaceFolder}",
-            "environment": [
-                {
-                    "name": "MAPBOX_ACCESS_TOKEN",
-                    "value": "${env:MAPBOX_ACCESS_TOKEN}"
-                },
-                {
-                    "name": "DRONE_SIM_TILE_PROVIDER",
-                    "value": "${env:DRONE_SIM_TILE_PROVIDER}"
-                },
-                {
-                    "name": "DRONE_SIM_LOG_LEVEL",
-                    "value": "${env:DRONE_SIM_LOG_LEVEL}"
-                }
-            ],
-            "stopAtEntry": false,
-            "externalConsole": false,
+            "envFile": "${workspaceFolder}/.env",
+            "stopOnEntry": false,
+            "terminal": "integrated",
             "preLaunchTask": "CMake: Build"
         }
     ]
